<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_header">Text</string>
     <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.

	</string>
    <string name="flexible_title">Flexible space</string>
    <string name="loc_sdk">定位SDK</string>
    <string name="geofence">地理围栏</string>
    <string name="app_name">吗哈大学</string>
    <string name="action_settings">Settings</string>
    <string name="group_name">群名称 </string>
    <string name="group_name_hint">输入群聊名称 </string>
    <string name="group_id">群ID </string>
    <string name="group_id_hint">输入群唯一标识ID </string>
    <string name="hello_world">Hello world!</string>

    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登    录</string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="demo1">广东外语外贸大学</string>
    <string name="demo2">QUANTA</string>
    <string name="demo3">思科信息学院</string>
    <string name="demo4">校学生会</string>

    <string name="empty"></string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有优农账号？</string>
    <string name="register_txt2">立即注册 >></string>

    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="groupmeeting">紧急会议！！！</string>
    
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">账号名不能为空</string>
    <string name="toast_error_groupname_null">群名称不能为空</string>
    <string name="toast_error_groupid_null">群ID不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>

    <string name="success">解锁成功</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    
    <string name="send_state">已读</string>
    
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    
    <string name="username">用户名</string>
    <string name="groupname">团队名</string>
    <string name="search">搜索</string>4

    <string name="hint_unlock">向右滑动拒绝会议邀请</string>
    
    <string name="new_friends">新朋友请求</string>
    
    <string name="near_people">查找新朋友</string>
    
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    
    <string name="voice_short_tips">录音时间太短</string>

   <!-- <string name="app_name">微信</string>-->
    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_album">我的相册</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
  <!--  <string name="action_settings">设置</string>-->
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">添加群组</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_register_group">注册群组</string>
    <string name="plus_note_model">笔记模板</string>
    <string name="plus_take_note">构建笔记</string>





    <string name="about">About</string>
    <string name="about_body"><![CDATA[
        Floating Action Button, a library by <a href="https://plus.google.com/+OleksandrMelnykov">Oleksandr Melnykov</a>.<br/>
        <a href=\'https://github.com/makovkastar/FloatingActionButton\'>https://github.com/makovkastar/FloatingActionButton</a>
    ]]></string>
    <string name="show_notice">\t\t\t\t\t自V1.0.6版本开始，应用源码中将不再公开ApplicationId,开发者请自行到官网申请。\n\t\t\t\t\t申请成功之后在应用程序启动页(SplashActivity)进行初始化操作!</string>
</resources>