<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/farmer_shop_list_back"
    >
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="120dip"
        android:layout_height="120dip"
        android:layout_marginBottom="10dp"
        android:src="@drawable/farmer_login"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
         android:layout_centerVertical="true"
        android:id="@+id/linearLayout2">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_farmer_name"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@drawable/edshape5"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="25dip"
                android:hint="@string/login_username_hint"
                android:paddingLeft="15dip"
                android:shadowDx="0.0"
                android:layout_marginBottom="20dp"

                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd" />


            <EditText
                android:id="@+id/et_farmer_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@drawable/edshape5"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="25dip"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dip"
                android:textColorHint="#ffdddddd" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_farmer_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
           android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/register_txt1"
            android:textColor="@color/base_color_text_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/register_txt2"
            android:textColor="@color/color"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>